<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021 Chaldeaprjkt
                   2022-2026 crDroid Android Project
                   2026 danhancach

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="library_options"
        android:title="@string/library_options_title">

        <SwitchPreferenceCompat
            android:key="gamespace_icon_vault"
            android:title="@string/icon_vault_title"
            android:summary="@string/icon_vault_summary"
            android:defaultValue="false"
            android:persistent="false" />

        <SwitchPreferenceCompat
            android:key="gamespace_auto_game_detect"
            android:title="@string/auto_game_detect_title"
            android:summary="@string/auto_game_detect_summary"
            android:defaultValue="true"
            android:persistent="false" />

    </PreferenceCategory>

    <io.chaldeaprjkt.gamespace.preferences.AppListPreferences
        android:key="gamespace_game_list"
        android:title="@string/game_list_title" />

</PreferenceScreen>
